tests/ui/inline-const/interior-mutable-borrow-issue-154382.stderr
error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:14:14
   |
LL |     &const { Mutable::new(0) }
   |     ---------^^^^^^^^^^^^^^^--
   |     |        |
   |     |        this borrow of an interior mutable value refers to such a temporary
   |     returning this value requires that borrow lasts for `'static`
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:25:52
   |
LL |     let _f: fn() -> &'static Mutable = || &const { Mutable::new(0) };
   |                                         - ---------^^^^^^^^^^^^^^^--
   |                                         | |        |
   |                                         | |        this borrow of an interior mutable value refers to such a temporary
   |                                         | returning this value requires that borrow lasts for `'1`
   |                                         return type of closure is &'1 Mutable
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:30:37
   |
LL |     let _h = Holder { val: &const { Mutable::new(0) } };
   |                            ---------^^^^^^^^^^^^^^^--
   |                            |        |
   |                            |        this borrow of an interior mutable value refers to such a temporary
   |                            this usage requires that borrow lasts for `'static`
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:35:27
   |
LL |     takes_static(&const { Mutable::new(0) });
   |     ----------------------^^^^^^^^^^^^^^^---
   |     |                     |
   |     |                     this borrow of an interior mutable value refers to such a temporary
   |     argument requires that borrow lasts for `'static`
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:42:18
   |
LL |     r = &const { Cell::new(0) };
   |                  ^^^^^^^^^^^^ this borrow of an interior mutable value refers to such a temporary
LL |
LL |     r.set(1);
   |     - borrow later used here
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`
help: consider using a `let` binding to create a longer lived value
   |
LL ~     let binding = const { Cell::new(0) };
LL ~     r = &binding;
   |

error[E0716]: temporary value dropped while borrowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:49:34
   |
LL |     let _: &'static mut _ = &mut const { Cell::new(0) };
   |            --------------        ^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |
LL | }
   | - temporary value is freed at the end of this statement

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:59:33
   |
LL |     let _: &'static _ = const { &Mutable::new(0u32) };
   |                                 ^^^^^^^^^^^^^^^^^^^ this borrow of an interior mutable value refers to such a temporary
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:56:34
   |
LL |     let _: &'static _ = &const { Mutable::new(0u32) };
   |            ----------            ^^^^^^^^^^^^^^^^^^ this borrow of an interior mutable value refers to such a temporary
   |            |
   |            type annotation requires that borrow lasts for `'static`
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/interior-mutable-borrow-issue-154382.rs:62:34
   |
LL |     let _: &'static _ = &const { AtomicUsize::new(0) };
   |            ----------            ^^^^^^^^^^^^^^^^^^^ this borrow of an interior mutable value refers to such a temporary
   |            |
   |            type annotation requires that borrow lasts for `'static`
   |
   = note: temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: to avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: if you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0492, E0716.
For more information about an error, try `rustc --explain E0492`.
